versions/v3.6.0/doxygen/html/globals_eval_u.md
---
version: v3.6.0
source_url: https://raw.githubusercontent.com/zephyrproject-rtos/zephyr/3.6.0/doc/doxygen/html/globals_eval_u.html
original_path: doxygen/html/globals_eval_u.html
---

| Logo | Zephyr API Documentation  3.6.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

Here is a list of all enum values with links to the files they belong to:

### - u -

- UART\_BREAK : [uart.h](group__uart__interface.md#ggadeba6c5485e01dfc1c8a6e1c21668a88a4986147e23cc46ab8c2aa7e151d09571)
- UART\_CFG\_DATA\_BITS\_5 : [uart.h](group__uart__interface.md#ggab9f7de744a68a311330576d7da02c44aa1b0545c2d1970e67d697b62510bfbe27)
- UART\_CFG\_DATA\_BITS\_6 : [uart.h](group__uart__interface.md#ggab9f7de744a68a311330576d7da02c44aac6e0f3c0479164c34144d0e6e28298e4)
- UART\_CFG\_DATA\_BITS\_7 : [uart.h](group__uart__interface.md#ggab9f7de744a68a311330576d7da02c44aa6120eb8f668b257c8c2dd0dc9cf0c913)
- UART\_CFG\_DATA\_BITS\_8 : [uart.h](group__uart__interface.md#ggab9f7de744a68a311330576d7da02c44aa23f55bdb24b4016c8c23c518e981df97)
- UART\_CFG\_DATA\_BITS\_9 : [uart.h](group__uart__interface.md#ggab9f7de744a68a311330576d7da02c44aaf3b601af696d8841fe79871ca3e41e5f)
- UART\_CFG\_FLOW\_CTRL\_DTR\_DSR : [uart.h](group__uart__interface.md#gga8e2f1b4a8d60d7a6c24835d1b26f99e8a0efc5de86bf80119f750cf372814309f)
- UART\_CFG\_FLOW\_CTRL\_NONE : [uart.h](group__uart__interface.md#gga8e2f1b4a8d60d7a6c24835d1b26f99e8a546b28db6f8bfc26266e8f7d6b8ff973)
- UART\_CFG\_FLOW\_CTRL\_RS485 : [uart.h](group__uart__interface.md#gga8e2f1b4a8d60d7a6c24835d1b26f99e8a9675cc80d44e980b66e99bc8548f085c)
- UART\_CFG\_FLOW\_CTRL\_RTS\_CTS : [uart.h](group__uart__interface.md#gga8e2f1b4a8d60d7a6c24835d1b26f99e8ad682bfe14a9f0860d1fdc3e8e9d56f86)
- UART\_CFG\_PARITY\_EVEN : [uart.h](group__uart__interface.md#ggab2ab6aacb6e3c43bb26d4274157e5711ac3a4310efe198a1fa7d977a5531486ba)
- UART\_CFG\_PARITY\_MARK : [uart.h](group__uart__interface.md#ggab2ab6aacb6e3c43bb26d4274157e5711a5ee61c29a32447644ff70385158a11ca)
- UART\_CFG\_PARITY\_NONE : [uart.h](group__uart__interface.md#ggab2ab6aacb6e3c43bb26d4274157e5711a6a23a2ef22fb3b144648b244fff82b8d)
- UART\_CFG\_PARITY\_ODD : [uart.h](group__uart__interface.md#ggab2ab6aacb6e3c43bb26d4274157e5711a8a618b0a531c8d62809e39eb56eaf5ed)
- UART\_CFG\_PARITY\_SPACE : [uart.h](group__uart__interface.md#ggab2ab6aacb6e3c43bb26d4274157e5711a8dc5306c8ca26321431bcf22ce9b036c)
- UART\_CFG\_STOP\_BITS\_0\_5 : [uart.h](group__uart__interface.md#ggafc1aecb863e2456d73b78a49fcbad72ea308c660590a9fd16143806e8bef002af)
- UART\_CFG\_STOP\_BITS\_1 : [uart.h](group__uart__interface.md#ggafc1aecb863e2456d73b78a49fcbad72ea73024f1618eb04385bf488214c635e58)
- UART\_CFG\_STOP\_BITS\_1\_5 : [uart.h](group__uart__interface.md#ggafc1aecb863e2456d73b78a49fcbad72ea1da47ec95b6a6eee65abef3d6d84f9ad)
- UART\_CFG\_STOP\_BITS\_2 : [uart.h](group__uart__interface.md#ggafc1aecb863e2456d73b78a49fcbad72eae180ecebc76516e89669e1d16bfb31c6)
- UART\_ERROR\_COLLISION : [uart.h](group__uart__interface.md#ggadeba6c5485e01dfc1c8a6e1c21668a88aad8ca4dca9a846560293df71e6b39786)
- UART\_ERROR\_FRAMING : [uart.h](group__uart__interface.md#ggadeba6c5485e01dfc1c8a6e1c21668a88af13f72a8c615b4bc570b5a4df573407b)
- UART\_ERROR\_NOISE : [uart.h](group__uart__interface.md#ggadeba6c5485e01dfc1c8a6e1c21668a88a412058adbf7668b7051efb8419984d60)
- UART\_ERROR\_OVERRUN : [uart.h](group__uart__interface.md#ggadeba6c5485e01dfc1c8a6e1c21668a88a442beffc51cdf265bbcb40810a9a6e54)
- UART\_ERROR\_PARITY : [uart.h](group__uart__interface.md#ggadeba6c5485e01dfc1c8a6e1c21668a88a86d38eac5a46e6659aa765164b833eb5)
- UART\_LINE\_CTRL\_BAUD\_RATE : [uart.h](group__uart__interface.md#gga02552532e171e789efc1b000917a9be0a3fdd02679f4f103190f3c12ab3cda00b)
- UART\_LINE\_CTRL\_DCD : [uart.h](group__uart__interface.md#gga02552532e171e789efc1b000917a9be0a6d2c438044dd64f5cef07bbe4c6b3e97)
- UART\_LINE\_CTRL\_DSR : [uart.h](group__uart__interface.md#gga02552532e171e789efc1b000917a9be0a87d8bedb5c918c182b271884ee42d75c)
- UART\_LINE\_CTRL\_DTR : [uart.h](group__uart__interface.md#gga02552532e171e789efc1b000917a9be0a19e76af9901fc0274a9e27ff40e29e23)
- UART\_LINE\_CTRL\_RTS : [uart.h](group__uart__interface.md#gga02552532e171e789efc1b000917a9be0a205d22bd797ab1c55323dc1ffda75f0d)
- UART\_RX\_BUF\_RELEASED : [uart.h](group__uart__async.md#ggaf0c9513cbafa36d86b4c83f2b6a03dcdab2d152bd84f659d4fc4060df29811b48)
- UART\_RX\_BUF\_REQUEST : [uart.h](group__uart__async.md#ggaf0c9513cbafa36d86b4c83f2b6a03dcda0d250f372702526f1bce6d4dfe166abe)
- UART\_RX\_DISABLED : [uart.h](group__uart__async.md#ggaf0c9513cbafa36d86b4c83f2b6a03dcdaa8ff5629c002a61bc3bdf5baa2ebc203)
- UART\_RX\_RDY : [uart.h](group__uart__async.md#ggaf0c9513cbafa36d86b4c83f2b6a03dcda7c70c3a56f64602f3d808b46e7b047f7)
- UART\_RX\_STOPPED : [uart.h](group__uart__async.md#ggaf0c9513cbafa36d86b4c83f2b6a03dcda05b81ddf74d208aeabace6ac90ae52dd)
- UART\_TX\_ABORTED : [uart.h](group__uart__async.md#ggaf0c9513cbafa36d86b4c83f2b6a03dcda0abcf565ba1011815285bb3845f8d5a1)
- UART\_TX\_DONE : [uart.h](group__uart__async.md#ggaf0c9513cbafa36d86b4c83f2b6a03dcda4b5cdf863d8b6e5cd7b58f611808a6e4)
- UDC\_BUS\_SPEED\_FS : [udc.h](udc_8h.md#a32d61ab6dbb734009102b5239a834d1ba8177d4c8e8cb0456f9c2a553c76dc0d5)
- UDC\_BUS\_SPEED\_HS : [udc.h](udc_8h.md#a32d61ab6dbb734009102b5239a834d1ba9fc26a4b4ba8db446731274b67182599)
- UDC\_BUS\_SPEED\_SS : [udc.h](udc_8h.md#a32d61ab6dbb734009102b5239a834d1ba71b0e0a870859cf1f0c11380833f790a)
- UDC\_BUS\_UNKNOWN : [udc.h](udc_8h.md#a32d61ab6dbb734009102b5239a834d1ba872aa49861a213ad970012f43db7d35d)
- UDC\_EVT\_EP\_REQUEST : [udc.h](udc_8h.md#a03749f5acb64ff8cfddc3c0b6b81a040a52bb5ea941db9a025ccb73de3fc6d55b)
- UDC\_EVT\_ERROR : [udc.h](udc_8h.md#a03749f5acb64ff8cfddc3c0b6b81a040a8ff69c0bc684eb113f1d4e0ec02dd70d)
- UDC\_EVT\_RESET : [udc.h](udc_8h.md#a03749f5acb64ff8cfddc3c0b6b81a040aa174f33c3802cec8d6c37606bc5ba9bb)
- UDC\_EVT\_RESUME : [udc.h](udc_8h.md#a03749f5acb64ff8cfddc3c0b6b81a040a0e0da320fe601eb1de24c142fc60f332)
- UDC\_EVT\_SOF : [udc.h](udc_8h.md#a03749f5acb64ff8cfddc3c0b6b81a040af20153f2fde8ea2bb1a985f2e17a2f78)
- UDC\_EVT\_SUSPEND : [udc.h](udc_8h.md#a03749f5acb64ff8cfddc3c0b6b81a040a120dc649618040f41da7542bf639159f)
- UDC\_EVT\_VBUS\_READY : [udc.h](udc_8h.md#a03749f5acb64ff8cfddc3c0b6b81a040a010cfc9f43a6faf68323201ae02fa00d)
- UDC\_EVT\_VBUS\_REMOVED : [udc.h](udc_8h.md#a03749f5acb64ff8cfddc3c0b6b81a040a4bdf374daa2aeb4f7b6b6c5fe2a46432)
- UDC\_MPS0\_16 : [udc.h](udc_8h.md#ac254f8a970f890d14e35c43474c915fda4a8ba94e9dced296d0e269390931e85a)
- UDC\_MPS0\_32 : [udc.h](udc_8h.md#ac254f8a970f890d14e35c43474c915fda1930322c1c7b053f3b9da2e319ed11e7)
- UDC\_MPS0\_64 : [udc.h](udc_8h.md#ac254f8a970f890d14e35c43474c915fdab481546bd71839266d4d881d6610633a)
- UDC\_MPS0\_8 : [udc.h](udc_8h.md#ac254f8a970f890d14e35c43474c915fdad961e13d52b708c9e6b8d951affd31bb)
- UF\_FRAGMENT : [parser\_url.h](parser__url_8h.md#a9ca1f91c2958091e2ac9e9b2f903d4eba32fb35461b96b6872f1427b2d51d1c30)
- UF\_HOST : [parser\_url.h](parser__url_8h.md#a9ca1f91c2958091e2ac9e9b2f903d4ebaf2aeb0b896645bd8100ca0f1e263a12f)
- UF\_MAX : [parser\_url.h](parser__url_8h.md#a9ca1f91c2958091e2ac9e9b2f903d4eba4b40c88291e4fa018de04553e7e1adfd)
- UF\_PATH : [parser\_url.h](parser__url_8h.md#a9ca1f91c2958091e2ac9e9b2f903d4eba86b9abfa220db7b834490d8b36e915af)
- UF\_PORT : [parser\_url.h](parser__url_8h.md#a9ca1f91c2958091e2ac9e9b2f903d4eba357b6dc1326ed55be377b0d839e8ca0f)
- UF\_QUERY : [parser\_url.h](parser__url_8h.md#a9ca1f91c2958091e2ac9e9b2f903d4ebabc8500a49ccad1cd91d66d1eefb503cc)
- UF\_SCHEMA : [parser\_url.h](parser__url_8h.md#a9ca1f91c2958091e2ac9e9b2f903d4ebab2b8b31b30d6bc897dde653f6cc9f06c)
- UF\_USERINFO : [parser\_url.h](parser__url_8h.md#a9ca1f91c2958091e2ac9e9b2f903d4ebacb4a85c6a7d6cd0b64ec6e91e7ba8689)
- UHC\_CONTROL\_STAGE\_DATA : [uhc.h](group__uhc__api.md#ggaef9b0703714676c1f7bd1cad57f49bc8a2179067786eb86aad804d0aead9d71a5)
- UHC\_CONTROL\_STAGE\_SETUP : [uhc.h](group__uhc__api.md#ggaef9b0703714676c1f7bd1cad57f49bc8a3f3c131b3a97a552d2917bbddcd9afc8)
- UHC\_CONTROL\_STAGE\_STATUS : [uhc.h](group__uhc__api.md#ggaef9b0703714676c1f7bd1cad57f49bc8a7bd9f0423e9f50266905c3736e12468f)
- UHC\_EVT\_DEV\_CONNECTED\_FS : [uhc.h](group__uhc__api.md#ggabaf69c1e69fe0fb3d912b92daf8754eba98d87b3c737c234918fed0ce4589f4ce)
- UHC\_EVT\_DEV\_CONNECTED\_HS : [uhc.h](group__uhc__api.md#ggabaf69c1e69fe0fb3d912b92daf8754eba923b6cfe57c254e22b57eab88c84b67f)
- UHC\_EVT\_DEV\_CONNECTED\_LS : [uhc.h](group__uhc__api.md#ggabaf69c1e69fe0fb3d912b92daf8754ebae0a316b8f60df97f30f54630f6847f70)
- UHC\_EVT\_DEV\_REMOVED : [uhc.h](group__uhc__api.md#ggabaf69c1e69fe0fb3d912b92daf8754ebab7c4181ad631b127cc50605f7864bc30)
- UHC\_EVT\_EP\_REQUEST : [uhc.h](group__uhc__api.md#ggabaf69c1e69fe0fb3d912b92daf8754eba5cdc8afb59f760c4dc9b2de314d05483)
- UHC\_EVT\_ERROR : [uhc.h](group__uhc__api.md#ggabaf69c1e69fe0fb3d912b92daf8754ebae5970877eb9b6426132d8955cdeb26d7)
- UHC\_EVT\_RESETED : [uhc.h](group__uhc__api.md#ggabaf69c1e69fe0fb3d912b92daf8754ebafb131548cc66e748e562ee88df274ab3)
- UHC\_EVT\_RESUMED : [uhc.h](group__uhc__api.md#ggabaf69c1e69fe0fb3d912b92daf8754ebad874caf1d7338081d185634e12f69848)
- UHC\_EVT\_RWUP : [uhc.h](group__uhc__api.md#ggabaf69c1e69fe0fb3d912b92daf8754ebaa616f846752aacb8029f9b21747c656e)
- UHC\_EVT\_SUSPENDED : [uhc.h](group__uhc__api.md#ggabaf69c1e69fe0fb3d912b92daf8754ebab28885b8210133d4f0c2b532561c9c7a)
- UHS\_DDR50\_BUS\_SPEED : [sd\_spec.h](sd__spec_8h.md#a6b42b86d8f2ba4f29787c7c6f3d97f36a022acb9d379c5ecf9935150ec6f51ffc)
- UHS\_SDR104\_BUS\_SPEED : [sd\_spec.h](sd__spec_8h.md#a6b42b86d8f2ba4f29787c7c6f3d97f36aef2ef100dab4187c8600ea721e8726dd)
- UHS\_SDR12\_BUS\_SPEED : [sd\_spec.h](sd__spec_8h.md#a6b42b86d8f2ba4f29787c7c6f3d97f36a30f38c9e54bed572ca315fdeb9122103)
- UHS\_SDR25\_BUS\_SPEED : [sd\_spec.h](sd__spec_8h.md#a6b42b86d8f2ba4f29787c7c6f3d97f36ae07a7ef1ffce64bab52c5f6612a96716)
- UHS\_SDR50\_BUS\_SPEED : [sd\_spec.h](sd__spec_8h.md#a6b42b86d8f2ba4f29787c7c6f3d97f36a360c72912e023e5b21363f3701deaa50)
- UPDATEHUB\_DOWNLOAD\_ERROR : [updatehub.h](group__updatehub.md#gga6e6eb49b1e4b558cd8be0da8b45a07b8ae610dad426920bb70a42eae7bdb6b00f)
- UPDATEHUB\_FLASH\_INIT\_ERROR : [updatehub.h](group__updatehub.md#gga6e6eb49b1e4b558cd8be0da8b45a07b8afeea264fa5140271de9ff5e6196c80a2)
- UPDATEHUB\_HAS\_UPDATE : [updatehub.h](group__updatehub.md#gga6e6eb49b1e4b558cd8be0da8b45a07b8a458c9aab40f11bb32e492e9dec1f362c)
- UPDATEHUB\_INCOMPATIBLE\_HARDWARE : [updatehub.h](group__updatehub.md#gga6e6eb49b1e4b558cd8be0da8b45a07b8a75c0d76cdc28948d09a6512c3e316e76)
- UPDATEHUB\_INSTALL\_ERROR : [updatehub.h](group__updatehub.md#gga6e6eb49b1e4b558cd8be0da8b45a07b8a5ec33576cdc17687e0e26aaf45f4382f)
- UPDATEHUB\_METADATA\_ERROR : [updatehub.h](group__updatehub.md#gga6e6eb49b1e4b558cd8be0da8b45a07b8a5c7ed853ebe09b62b8c6348a695a6171)
- UPDATEHUB\_NETWORKING\_ERROR : [updatehub.h](group__updatehub.md#gga6e6eb49b1e4b558cd8be0da8b45a07b8aa0d2256936bee57106ccffe48c3d080a)
- UPDATEHUB\_NO\_UPDATE : [updatehub.h](group__updatehub.md#gga6e6eb49b1e4b558cd8be0da8b45a07b8a6bfb08c9056ed87c58025419280af730)
- UPDATEHUB\_OK : [updatehub.h](group__updatehub.md#gga6e6eb49b1e4b558cd8be0da8b45a07b8a8ec40cbba06d67803fa611bf30984f43)
- UPDATEHUB\_UNCONFIRMED\_IMAGE : [updatehub.h](group__updatehub.md#gga6e6eb49b1e4b558cd8be0da8b45a07b8a5f5ae5102a0d8e318652067b2a097037)
- USB\_AUDIO\_AC\_DESCRIPTOR\_UNDEFINED : [usb\_audio.h](usb__audio_8h.md#ab5e6c883af53c089c7fcdee4d2249d9aa2eee02b3652783891eb878bd0a02227d)
- USB\_AUDIO\_AS\_DESCRIPTOR\_UNDEFINED : [usb\_audio.h](usb__audio_8h.md#ade80a3c7e04049fd27e4e39269baaeeba6ac0131cbfcbe01e06cde15e6fdb4e5e)
- USB\_AUDIO\_AS\_GENERAL : [usb\_audio.h](usb__audio_8h.md#ade80a3c7e04049fd27e4e39269baaeeba8cefa4d87a243d6ee01b0c72bc39fe84)
- USB\_AUDIO\_AUDIOCONTROL : [usb\_audio.h](usb__audio_8h.md#a4885d280ebe68e42cf068524038ec582aabd72d1d6016fbe1e37788f37c1c8cac)
- USB\_AUDIO\_AUDIOSTREAMING : [usb\_audio.h](usb__audio_8h.md#a4885d280ebe68e42cf068524038ec582a8f451ebdab0c5a1d930ce5808b6f0892)
- USB\_AUDIO\_EXTENSION\_UNIT : [usb\_audio.h](usb__audio_8h.md#ab5e6c883af53c089c7fcdee4d2249d9aad1f55fd97d0217453704ba61a7357ca1)
- USB\_AUDIO\_FEATURE\_UNIT : [usb\_audio.h](usb__audio_8h.md#ab5e6c883af53c089c7fcdee4d2249d9aad06ebbc1c9c35ec35dca8c7bb95c52c7)
- USB\_AUDIO\_FORMAT\_SPECIFIC : [usb\_audio.h](usb__audio_8h.md#ade80a3c7e04049fd27e4e39269baaeebada7521b50fd74ef8bfb77485976e0e0a)
- USB\_AUDIO\_FORMAT\_TYPE : [usb\_audio.h](usb__audio_8h.md#ade80a3c7e04049fd27e4e39269baaeebab7df49ec3cb5b7a7f19c7f0ec9161de4)
- USB\_AUDIO\_FU\_AUTOMATIC\_GAIN\_CONTROL : [usb\_audio.h](usb__audio_8h.md#a4d49f239cc36daf8bd0cfa36c5fb75d2a9e9d8f03326339a9a5e212aad42f984f)
- USB\_AUDIO\_FU\_BASS\_BOOST\_CONTROL : [usb\_audio.h](usb__audio_8h.md#a4d49f239cc36daf8bd0cfa36c5fb75d2a1c23bc45ef27b6acf87da3c68281d2a3)
- USB\_AUDIO\_FU\_BASS\_CONTROL : [usb\_audio.h](usb__audio_8h.md#a4d49f239cc36daf8bd0cfa36c5fb75d2a2b14e19e39d96c31764f89128b393efc)
- USB\_AUDIO\_FU\_CONTROL\_UNDEFINED : [usb\_audio.h](usb__audio_8h.md#a4d49f239cc36daf8bd0cfa36c5fb75d2a08d27821af6c7d875351ec8f58082794)
- USB\_AUDIO\_FU\_DELAY\_CONTROL : [usb\_audio.h](usb__audio_8h.md#a4d49f239cc36daf8bd0cfa36c5fb75d2aef98729fa59119eb0e0cbed2e6a992da)
- USB\_AUDIO\_FU\_GRAPHIC\_EQUALIZER\_CONTROL : [usb\_audio.h](usb__audio_8h.md#a4d49f239cc36daf8bd0cfa36c5fb75d2a26c439798671f4efe7b6469f3dcd37c5)
- USB\_AUDIO\_FU\_LOUDNESS\_CONTROL : [usb\_audio.h](usb__audio_8h.md#a4d49f239cc36daf8bd0cfa36c5fb75d2adae061d51c1df5d03cc47b7b2c412f1d)
- USB\_AUDIO\_FU\_MID\_CONTROL : [usb\_audio.h](usb__audio_8h.md#a4d49f239cc36daf8bd0cfa36c5fb75d2acfcc2072d11863eaedb68f87a93eb601)
- USB\_AUDIO\_FU\_MUTE\_CONTROL : [usb\_audio.h](usb__audio_8h.md#a4d49f239cc36daf8bd0cfa36c5fb75d2adb4f2720ad78a26d22279a45df56b43d)
- USB\_AUDIO\_FU\_TREBLE\_CONTROL : [usb\_audio.h](usb__audio_8h.md#a4d49f239cc36daf8bd0cfa36c5fb75d2a657b1e5689be60c2f1ce6d3d2cb68f89)
- USB\_AUDIO\_FU\_VOLUME\_CONTROL : [usb\_audio.h](usb__audio_8h.md#a4d49f239cc36daf8bd0cfa36c5fb75d2a6d258289b44ddeb1153168fafb92c0d8)
- USB\_AUDIO\_GET\_CUR : [usb\_audio.h](usb__audio_8h.md#ad6eb1c3ec75aef329ea973d1cb4dc6ada8d2d8fdf1663f9691f566245062b2cf6)
- USB\_AUDIO\_GET\_MAX : [usb\_audio.h](usb__audio_8h.md#ad6eb1c3ec75aef329ea973d1cb4dc6adac027c9e016ad88a9c135a0c1050921bb)
- USB\_AUDIO\_GET\_MEM : [usb\_audio.h](usb__audio_8h.md#ad6eb1c3ec75aef329ea973d1cb4dc6ada6e3db81f03ab284c82c254952c3f7259)
- USB\_AUDIO\_GET\_MIN : [usb\_audio.h](usb__audio_8h.md#ad6eb1c3ec75aef329ea973d1cb4dc6ada2e921e391ec9f89345e6b63ad1fd5da6)
- USB\_AUDIO\_GET\_RES : [usb\_audio.h](usb__audio_8h.md#ad6eb1c3ec75aef329ea973d1cb4dc6ada4ce3135409f73b58295898087e9ff485)
- USB\_AUDIO\_GET\_STAT : [usb\_audio.h](usb__audio_8h.md#ad6eb1c3ec75aef329ea973d1cb4dc6ada229701fae8fdc58a530ffcdd1cdea109)
- USB\_AUDIO\_HEADER : [usb\_audio.h](usb__audio_8h.md#ab5e6c883af53c089c7fcdee4d2249d9aa533df0f1df0cd0ba91f05922780c3f51)
- USB\_AUDIO\_IN : [usb\_audio.h](usb__audio_8h.md#acbdc8b284d108983fb204cbd679043bbab2ce7b1140be0d960ab2754bc8e262dd)
- USB\_AUDIO\_IN\_DESKTOP\_MIC : [usb\_audio.h](usb__audio_8h.md#ad73e9e9b72475496b6c483f78605e79ea3140dd357e3093db21f581226a6b000a)
- USB\_AUDIO\_IN\_MIC\_ARRAY : [usb\_audio.h](usb__audio_8h.md#ad73e9e9b72475496b6c483f78605e79ea2eaf530492705b7e493e5d746752c262)
- USB\_AUDIO\_IN\_MICROPHONE : [usb\_audio.h](usb__audio_8h.md#ad73e9e9b72475496b6c483f78605e79ea699cefac29e9d9c60f53562c7ad7050d)
- USB\_AUDIO\_IN\_OM\_DIR\_MIC : [usb\_audio.h](usb__audio_8h.md#ad73e9e9b72475496b6c483f78605e79ea456a90d55e1b271698516d89e8ba7f5b)
- USB\_AUDIO\_IN\_PERSONAL\_MIC : [usb\_audio.h](usb__audio_8h.md#ad73e9e9b72475496b6c483f78605e79ea3cace6841265454e604513ebba78f749)
- USB\_AUDIO\_IN\_PROC\_MIC\_ARRAY : [usb\_audio.h](usb__audio_8h.md#ad73e9e9b72475496b6c483f78605e79eac565b3d090c71949c1e1423bb8529c86)
- USB\_AUDIO\_IN\_UNDEFINED : [usb\_audio.h](usb__audio_8h.md#ad73e9e9b72475496b6c483f78605e79eaf85af15795d80c07cdff711ac172be57)
- USB\_AUDIO\_INPUT\_TERMINAL : [usb\_audio.h](usb__audio_8h.md#ab5e6c883af53c089c7fcdee4d2249d9aa80b350d862e1fe02fb04572481ae6343)
- USB\_AUDIO\_IO\_HANDSET : [usb\_audio.h](usb__audio_8h.md#ad73e9e9b72475496b6c483f78605e79ea24f6c5657c301871089dc8eac3b5d207)
- USB\_AUDIO\_IO\_HEADSET : [usb\_audio.h](usb__audio_8h.md#ad73e9e9b72475496b6c483f78605e79eaf75bca3db10d28611a9ffa8637a4488e)
- USB\_AUDIO\_IO\_SPEAKERPHONE\_ECHO\_CAN : [usb\_audio.h](usb__audio_8h.md#ad73e9e9b72475496b6c483f78605e79ea319eef3f2a59242b0c8dd5ca50212e14)
- USB\_AUDIO\_IO\_SPEAKERPHONE\_ECHO\_NONE : [usb\_audio.h](usb__audio_8h.md#ad73e9e9b72475496b6c483f78605e79ea232edf193a4f755d8821c51001d11f1d)
- USB\_AUDIO\_IO\_SPEAKERPHONE\_ECHO\_SUP : [usb\_audio.h](usb__audio_8h.md#ad73e9e9b72475496b6c483f78605e79eab7f8515fb0154f5b0e038f485bdadaf6)
- USB\_AUDIO\_IO\_UNDEFINED : [usb\_audio.h](usb__audio_8h.md#ad73e9e9b72475496b6c483f78605e79eac740f1b3cfcfba8c4def54e1ca81a3d8)
- USB\_AUDIO\_MIDISTREAMING : [usb\_audio.h](usb__audio_8h.md#a4885d280ebe68e42cf068524038ec582a589d9e4883f109f787517a017d6187b2)
- USB\_AUDIO\_MIXER\_UNIT : [usb\_audio.h](usb__audio_8h.md#ab5e6c883af53c089c7fcdee4d2249d9aa10f58b16088a3218eb4ed8c31ffd9dfe)
- USB\_AUDIO\_OUT : [usb\_audio.h](usb__audio_8h.md#acbdc8b284d108983fb204cbd679043bba0f0e91f9580d03853432259d74f108ba)
- USB\_AUDIO\_OUT\_COMM\_SPEAKER : [usb\_audio.h](usb__audio_8h.md#ad73e9e9b72475496b6c483f78605e79eaff9805f63bd75e000dd08652c6dc913b)
- USB\_AUDIO\_OUT\_DESKTOP\_SPEAKER : [usb\_audio.h](usb__audio_8h.md#ad73e9e9b72475496b6c483f78605e79eacf6fe169bd54e6178dc74bd7c504f795)
- USB\_AUDIO\_OUT\_HEAD\_AUDIO : [usb\_audio.h](usb__audio_8h.md#ad73e9e9b72475496b6c483f78605e79eaed594545b8a4e2c0e0703b4b9d3ebb73)
- USB\_AUDIO\_OUT\_HEADPHONES : [usb\_audio.h](usb__audio_8h.md#ad73e9e9b72475496b6c483f78605e79eac551e3ea3e21ddf057062fe7d05b3ec9)
- USB\_AUDIO\_OUT\_LOW\_FREQ\_SPEAKER : [usb\_audio.h](usb__audio_8h.md#ad73e9e9b72475496b6c483f78605e79ea8b48c4993389b7f5a08d55b68b924480)
- USB\_AUDIO\_OUT\_ROOM\_SPEAKER : [usb\_audio.h](usb__audio_8h.md#ad73e9e9b72475496b6c483f78605e79eae6581df62f5da9ab88149ec8049d7213)
- USB\_AUDIO\_OUT\_SPEAKER : [usb\_audio.h](usb__audio_8h.md#ad73e9e9b72475496b6c483f78605e79ea349881bce5285d61f886aec8fc2bf84c)
- USB\_AUDIO\_OUT\_UNDEFINED : [usb\_audio.h](usb__audio_8h.md#ad73e9e9b72475496b6c483f78605e79ea64f43c7efb785a88f72302d2ad8d00f0)
- USB\_AUDIO\_OUTPUT\_TERMINAL : [usb\_audio.h](usb__audio_8h.md#ab5e6c883af53c089c7fcdee4d2249d9aa357c88ef81ee69875f4cbbf5610fd48f)
- USB\_AUDIO\_PROCESSING\_UNIT : [usb\_audio.h](usb__audio_8h.md#ab5e6c883af53c089c7fcdee4d2249d9aae5e4af543ede652cda987db1ca5b10ab)
- USB\_AUDIO\_REQUEST\_CODE\_UNDEFINED : [usb\_audio.h](usb__audio_8h.md#ad6eb1c3ec75aef329ea973d1cb4dc6ada6e5e1dd7fd6292ba8bcc4564223b8220)
- USB\_AUDIO\_SELECTOR\_UNIT : [usb\_audio.h](usb__audio_8h.md#ab5e6c883af53c089c7fcdee4d2249d9aab01072ed5bad284a34cf9a2e8b2098e5)
- USB\_AUDIO\_SET\_CUR : [usb\_audio.h](usb__audio_8h.md#ad6eb1c3ec75aef329ea973d1cb4dc6ada1088106727c5c6d850dd2ab98a7b454d)
- USB\_AUDIO\_SET\_MAX : [usb\_audio.h](usb__audio_8h.md#ad6eb1c3ec75aef329ea973d1cb4dc6ada96ac36a0735d03e3addf0fe540903707)
- USB\_AUDIO\_SET\_MEM : [usb\_audio.h](usb__audio_8h.md#ad6eb1c3ec75aef329ea973d1cb4dc6adae89a907671d2940da6bb4c58cf9a7fd0)
- USB\_AUDIO\_SET\_MIN : [usb\_audio.h](usb__audio_8h.md#ad6eb1c3ec75aef329ea973d1cb4dc6ada6f5faa411e92cdeacdc521bd05b4bfab)
- USB\_AUDIO\_SET\_RES : [usb\_audio.h](usb__audio_8h.md#ad6eb1c3ec75aef329ea973d1cb4dc6ada1945ba97faeff43f68bd4918be76a4e7)
- USB\_AUDIO\_SUBCLASS\_UNDEFINED : [usb\_audio.h](usb__audio_8h.md#a4885d280ebe68e42cf068524038ec582aba82b7b28c0ad0ecf125695bd1f35db2)
- USB\_AUDIO\_USB\_STREAMING : [usb\_audio.h](usb__audio_8h.md#ad73e9e9b72475496b6c483f78605e79eaad81dbd6f39554f52c3912755643d661)
- USB\_AUDIO\_USB\_UNDEFINED : [usb\_audio.h](usb__audio_8h.md#ad73e9e9b72475496b6c483f78605e79eaa0fbe557eba975cb5e368e199ea4f6d4)
- USB\_AUDIO\_USB\_VENDOR\_SPEC : [usb\_audio.h](usb__audio_8h.md#ad73e9e9b72475496b6c483f78605e79ea64205001486011d22c1ec0abd382a486)
- USB\_BOS\_CAPABILITY\_EXTENSION : [bos.h](group__usb__bos.md#gga0bddefd6b9373068cd4ff8e6fc47950da2ca67045883d490b849193d4a5a29862)
- USB\_BOS\_CAPABILITY\_PLATFORM : [bos.h](group__usb__bos.md#gga0bddefd6b9373068cd4ff8e6fc47950da5eb29e64487aa25625305f0b4595394b)
- USB\_DC\_CLEAR\_HALT : [usb\_dc.h](group____usb__device__controller__api.md#ggac09e3e0af1a2b41a5bfbad91f900baf7a25d070f91c1e3ff0382b360f5ac2d501)
- USB\_DC\_CONFIGURED : [usb\_dc.h](group____usb__device__controller__api.md#ggac09e3e0af1a2b41a5bfbad91f900baf7a63372b97af29a434d58a970439afc23f)
- USB\_DC\_CONNECTED : [usb\_dc.h](group____usb__device__controller__api.md#ggac09e3e0af1a2b41a5bfbad91f900baf7a643918c145a481a36bda37ae5b36599f)
- USB\_DC\_DISCONNECTED : [usb\_dc.h](group____usb__device__controller__api.md#ggac09e3e0af1a2b41a5bfbad91f900baf7a3584740de2622bf915e67fee6104da4c)
- USB\_DC\_EP\_ADAPTIVE : [usb\_dc.h](group____usb__device__controller__api.md#ggae247c1ce7213e35d7ce74598225fa428a13e7d8970d0723b36a17ae8a29dc9151)
- USB\_DC\_EP\_ASYNCHRONOUS : [usb\_dc.h](group____usb__device__controller__api.md#ggae247c1ce7213e35d7ce74598225fa428a8cb40e0f2b85da1adfc005fbd5f9f45d)
- USB\_DC\_EP\_BULK : [usb\_dc.h](group____usb__device__controller__api.md#ggaca68e4a7c3c0a984d1df23794cfa7d87aa0ecbc47a337243efd86155cb4ca54fe)
- USB\_DC\_EP\_CONTROL : [usb\_dc.h](group____usb__device__controller__api.md#ggaca68e4a7c3c0a984d1df23794cfa7d87a10c7e329a8eceb8cc693b77743f43681)
- USB\_DC\_EP\_DATA\_IN : [usb\_dc.h](group____usb__device__controller__api.md#ggaf7f083f61e1406e7d41513113dccd3bdae2f497d34e18d6431ab886d120bd124c)
- USB\_DC\_EP\_DATA\_OUT : [usb\_dc.h](group____usb__device__controller__api.md#ggaf7f083f61e1406e7d41513113dccd3bda1801d1ba252ed6a0e573c46e76ae1f78)
- USB\_DC\_EP\_INTERRUPT : [usb\_dc.h](group____usb__device__controller__api.md#ggaca68e4a7c3c0a984d1df23794cfa7d87aa70b161209601f1d7a43c5ebcc197b73)
- USB\_DC\_EP\_ISOCHRONOUS : [usb\_dc.h](group____usb__device__controller__api.md#ggaca68e4a7c3c0a984d1df23794cfa7d87a75c49ff44a9729723af190640a710ab6)
- USB\_DC\_EP\_NO\_SYNCHRONIZATION : [usb\_dc.h](group____usb__device__controller__api.md#ggae247c1ce7213e35d7ce74598225fa428a98061a0e90201b01c7b9b04b51eb0da8)
- USB\_DC\_EP\_SETUP : [usb\_dc.h](group____usb__device__controller__api.md#ggaf7f083f61e1406e7d41513113dccd3bdabeb0ca69354218c5efc14c4ddbdf1c27)
- USB\_DC\_EP\_SYNCHRONOUS : [usb\_dc.h](group____usb__device__controller__api.md#ggae247c1ce7213e35d7ce74598225fa428a70976afffbf9a9ef89eb51453c4307c5)
- USB\_DC\_ERROR : [usb\_dc.h](group____usb__device__controller__api.md#ggac09e3e0af1a2b41a5bfbad91f900baf7a8c34e2279a64268809170d6b7f08ed14)
- USB\_DC\_INTERFACE : [usb\_dc.h](group____usb__device__controller__api.md#ggac09e3e0af1a2b41a5bfbad91f900baf7a65828d350f0cd42be7f8406624eb3828)
- USB\_DC\_RESET : [usb\_dc.h](group____usb__device__controller__api.md#ggac09e3e0af1a2b41a5bfbad91f900baf7a6486b0e1a9f4c68fd3bc3b6b3354daa6)
- USB\_DC\_RESUME : [usb\_dc.h](group____usb__device__controller__api.md#ggac09e3e0af1a2b41a5bfbad91f900baf7a306cbcf313be2111434f3e29b787de1d)
- USB\_DC\_SET\_HALT : [usb\_dc.h](group____usb__device__controller__api.md#ggac09e3e0af1a2b41a5bfbad91f900baf7a426477e3ab4378cb0783523346e5ff23)
- USB\_DC\_SOF : [usb\_dc.h](group____usb__device__controller__api.md#ggac09e3e0af1a2b41a5bfbad91f900baf7abe89e0ffc160ffd1d8ae88d3771fcbc0)
- USB\_DC\_SUSPEND : [usb\_dc.h](group____usb__device__controller__api.md#ggac09e3e0af1a2b41a5bfbad91f900baf7afb40fc53f01c4e947a7d4c85a1a21c87)
- USB\_DC\_UNKNOWN : [usb\_dc.h](group____usb__device__controller__api.md#ggac09e3e0af1a2b41a5bfbad91f900baf7a8a0f6af1f3625530c9ecdfb2409205d9)
- USBC\_PPC\_EVENT\_BOTH\_SNKSRC\_ENABLED : [usbc\_ppc.h](usbc__ppc_8h.md#a3dbbb1a6701a3a79c9a1d148b239fcf9aaa39462464dfaf5a0f57fa6407114b94)
- USBC\_PPC\_EVENT\_DEAD\_BATTERY\_ERROR : [usbc\_ppc.h](usbc__ppc_8h.md#a3dbbb1a6701a3a79c9a1d148b239fcf9a8e6635e7e347418f328ce5ebcb303d5e)
- USBC\_PPC\_EVENT\_OVER\_TEMPERATURE : [usbc\_ppc.h](usbc__ppc_8h.md#a3dbbb1a6701a3a79c9a1d148b239fcf9ac241608a878e709571144ad5f207140c)
- USBC\_PPC\_EVENT\_SNK\_OVERVOLTAGE : [usbc\_ppc.h](usbc__ppc_8h.md#a3dbbb1a6701a3a79c9a1d148b239fcf9a7e6392785fe1d6f5c3cef3b179952b0e)
- USBC\_PPC\_EVENT\_SNK\_REVERSE\_CURRENT : [usbc\_ppc.h](usbc__ppc_8h.md#a3dbbb1a6701a3a79c9a1d148b239fcf9a6d189e6a1c326f6746cb3e4abd0a7759)
- USBC\_PPC\_EVENT\_SNK\_SHORT : [usbc\_ppc.h](usbc__ppc_8h.md#a3dbbb1a6701a3a79c9a1d148b239fcf9aa4434d091f55ad29e7fb46b681fc376d)
- USBC\_PPC\_EVENT\_SRC\_OVERCURRENT : [usbc\_ppc.h](usbc__ppc_8h.md#a3dbbb1a6701a3a79c9a1d148b239fcf9a4fbd9543f2596349d26d7c1cc6278238)
- USBC\_PPC\_EVENT\_SRC\_OVERVOLTAGE : [usbc\_ppc.h](usbc__ppc_8h.md#a3dbbb1a6701a3a79c9a1d148b239fcf9a54615a71ead7913f6eb708be78fee109)
- USBC\_PPC\_EVENT\_SRC\_REVERSE\_CURRENT : [usbc\_ppc.h](usbc__ppc_8h.md#a3dbbb1a6701a3a79c9a1d148b239fcf9a3eca3adb253db52fb444c0163781dde6)
- USBC\_PPC\_EVENT\_SRC\_SHORT : [usbc\_ppc.h](usbc__ppc_8h.md#a3dbbb1a6701a3a79c9a1d148b239fcf9addcec15b50f34307780822cb1fc329c4)
- USBD\_DUT\_STRING\_INTERFACE : [usbd.h](group__usbd__api.md#ggaa7ed6f04fd7058c422f5ebc378f1a3daaa4dd69c222492b1f12b3993c4640c80d)
- USBD\_DUT\_STRING\_LANG : [usbd.h](group__usbd__api.md#ggaa7ed6f04fd7058c422f5ebc378f1a3daa984cc2f845e2e2bcc83d2e9f0138e3bd)
- USBD\_DUT\_STRING\_MANUFACTURER : [usbd.h](group__usbd__api.md#ggaa7ed6f04fd7058c422f5ebc378f1a3daa25eb10630b10db28f9f97aa0b81f3c4e)
- USBD\_DUT\_STRING\_PRODUCT : [usbd.h](group__usbd__api.md#ggaa7ed6f04fd7058c422f5ebc378f1a3daa67c8a16639167a0a7a6f615d5aa6b73e)
- USBD\_DUT\_STRING\_SERIAL\_NUMBER : [usbd.h](group__usbd__api.md#ggaa7ed6f04fd7058c422f5ebc378f1a3daac4fff2e4994a473899aea6ed8a0ec782)
- USBD\_STATE\_ADDRESS : [usbd.h](group__usbd__api.md#gga95fb708d8a54eaa3ce0acc4e65519bbca985f06c5505c5684a98954f15701cc9d)
- USBD\_STATE\_CONFIGURED : [usbd.h](group__usbd__api.md#gga95fb708d8a54eaa3ce0acc4e65519bbca44c1920b09ea1062ea4d7ac31a846509)
- USBD\_STATE\_DEFAULT : [usbd.h](group__usbd__api.md#gga95fb708d8a54eaa3ce0acc4e65519bbca978c707d313eb49b70bc62dfae304048)
- USBPD\_CC\_PIN\_1 : [usbc\_pd.h](group__usb__power__delivery.md#ggaee2fe2128557939404c62e8104269bbfa59a0ed05c4e99acebaa11080dbbe7694)
- USBPD\_CC\_PIN\_2 : [usbc\_pd.h](group__usb__power__delivery.md#ggaee2fe2128557939404c62e8104269bbfa53a0a6ba0212b9cbb407522e7f35648e)

- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/3.6.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
